# transformers

./: .gitignore  .planning.md  AGENTS.md  BUILDER_REFACTORING_SUMMARY.md  CLEANUP_SUMMARY.md  CLEAN_API_EXAMPLE.md  Cargo.toml  PERFORMANCE_FIX_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  SPRING_CLEANING_ANALYSIS.md  XML_PARSER_CLEAN_API_STATUS.md  XML_PARSER_FEATURE_SUMMARY.md  XML_PARSER_IMPLEMENTATION_STATUS.md  benchmark_reranker.rs  code_review.md  license.md  package-lock.json  spring_cleaning_scan_report.md  test_compilation  test_reranker.rs  tool_use_plan.md
.claude/: settings.local.json
.github/workflows/: build_and_release.yaml  test.yaml  test_dev.yaml  test_main.yaml
examples/: basic.rs  benchmark_reranker.rs  check_model_layers.rs  compare_reranker.rs  debug_slow_reranker.rs  embedding.rs  example_usage.rs  fill_mask.rs  fill_mask_pipeline.rs  inspect_gguf.rs  investigate_scoring_bug.rs  investigate_scoring_simple.rs  reranker.rs  reranker_example.rs  sentiment_analysis.rs  sentiment_analysis_pipeline.rs  stream_output_demo.rs  test_multi.rs  test_vocab_perf.rs  text_generation.rs  text_generation_pipeline.rs  text_generation_pipeline_streaming.rs  text_generation_pipeline_with_messages.rs  text_generation_streaming.rs  text_generation_tools.rs  time_reranker.rs  tool_calling.rs  xml_parser.rs  xml_parser_demo.rs  xml_parser_streaming.rs  xml_parser_tag_registry.rs  xml_parsing_example.rs  zero_shot.rs  zero_shot_classification_pipeline.rs
examples/reranker/: main.rs
examples/reranker/corpus/: machine_learning_doc.txt  math_doc.txt  misc_doc.txt  physics_doc.txt
src/: gemma_3_quantized.rs  generation.rs  lib.rs  loaders.rs  utils.rs
src/core/: cache.rs  config.rs  error.rs  message.rs  mod.rs
src/models/: gemma_3.rs  generation.rs  mod.rs  modern_bert.rs  modernbert.rs  phi_4.rs  quantized_gemma3.rs  quantized_nn.rs  quantized_qwen3.rs  qwen_3.rs  sentiment_modern_bert.rs  shared.rs  zero_shot_modern_bert.rs
src/models/components/: attention.rs  common_layers.rs  layers.rs  mod.rs  quantization.rs
src/models/generation/: logits.rs  mod.rs  params.rs  sampling.rs
src/models/implementations/: gemma3.rs  mod.rs  modernbert.rs  qwen3.rs  qwen3_embeddings.rs  qwen3_reranker.rs
src/models/quantized/: gemma_3_quantized.rs  mod.rs  phi_4_quantized.rs  qwen3_quantized.rs
src/models/raw/: generation.rs  mod.rs  quantized_nn.rs  quantized_qwen3.rs  utils.rs
src/pipelines/: base.rs  basic_pipeline.rs  capabilities.rs  combined_pipelines.rs  fill_mask_pipeline.rs  mod.rs  model_options.rs  sentiment_analysis_pipeline.rs  text_generation_pipeline.rs  tool_calling_pipeline.rs  traits.rs  zero_shot_classification_pipeline.rs
src/pipelines/embedding_pipeline/: builder.rs  embedding_model.rs  mod.rs  (+3 more)
src/utils/: cache.rs  configs.rs  gguf_cache.rs  loaders.rs  mod.rs  model_cache.rs
tests/: multi_pipeline.rs  pipeline_tests.rs
tests/common/: mod.rs
tests/embedding_pipeline_tests/: basic_embedding.rs  batch_embedding.rs  main.rs
tests/fill_mask_pipeline_tests/: basic_fill_mask.rs  main.rs
tests/misc_pipeline_tests/: main.rs  multi_pipeline.rs  tool_calling.rs  tool_error_handling.rs  tool_management.rs
tests/sentiment_analysis_pipeline_tests/: basic_sentiment_analysis.rs  main.rs
tests/text_generation_pipeline_tests/: basic_text_generation.rs  main.rs
tests/zero_shot_pipeline_tests/: basic_zero_shot_classification.rs  main.rs
tool_macro/: Cargo.toml
tool_macro/src/: lib.rs
(+72 files in other folders)
