[package]
name = "tool_macro"
version = "0.1.2"
edition = "2021"
description = "Procedural macros for transformers crate"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
inventory = "0.3.20" 
linkme = "0.3.32"
serde_json = "1.0.140"
futures = "0.3.30"